Retorno de ação sem existir a ação

--- a/index.html
+++ b/index.html
@@ -16,9 +16,11 @@
 </style>
 
 <center>
-
-    <a href="#Curso">CURSO</a> |
-    <a href="#Formacao">FORMAÇÃO</a> |
+    <nav>
+        <a href="#Curso">CURSO</a> |
+        <a href="#Formacao">FORMAÇÃO</a> |    
+        <a href="#Pessoa">PESSOA</a>   
+    </nav>
 
     <hr>
 
