Sessão via localstorage

--- a/index.html
+++ b/index.html
@@ -17,16 +17,18 @@
 
 <center>
     <nav>
+        <a href="#Usuario">INÍCIO</a> |
         <a href="#Curso">CURSO</a> |
         <a href="#Formacao">FORMAÇÃO</a> |    
-        <a href="#Pessoa">PESSOA</a>   
+        <a href="#Pessoa">PESSOA</a>
+        <small id="menuSair" style="cursor: pointer" onclick="sair()" > | Sair</small>
     </nav>
 
     <hr>
 
     <h3 id="ACAO_MSG_OK" style="color: green"></h3>
     <h3 id="ACAO_MSG_ERRO" style="color: red"></h3>
-    <table border="1" style="min-width: 500px">
+    <table border="1" style="min-width: 500px" id="app-tabela">
         <tr style=" vertical-align: top" id="app">
             <!-- conteudo -->
         </tr>
